force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__ChangePerDayAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangePerDayAmount__c</fullName>
    <label>Change Per Day Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangePerDayAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>