force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__GiftCmtChangeStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftCmtChangeStatus__c</fullName>
    <label>Change Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftCmtChangeStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>