force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__GiftCmtChangeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftCmtChangeType__c</fullName>
    <label>Change Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftCmtChangeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>