force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__GiftCommitmentScheduleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftCommitmentScheduleId__c</fullName>
    <label>Gift Commitment Schedule</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftCommitmentScheduleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>