force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__rel_1716670513288_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670513288_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftCmtChangeAttrLog_CampaignId_map__rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>GiftCmtChangeAttrLog_CampaignId_map__rel</relationshipLabel>
    <relationshipName>rel_1716670513288_end</relationshipName>
    <type>Lookup</type>
</CustomField>