force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__rel_1724992822276_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724992822276_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftCmtChangeAttrLog_GiftCommitmentS_rel</label>
    <referenceTo>ssot__GiftCommitmentSchedule__dlm</referenceTo>
    <relationshipLabel>GiftCmtChangeAttrLog_GiftCommitmentS_rel</relationshipLabel>
    <relationshipName>rel_1724992822276_end</relationshipName>
    <type>Lookup</type>
</CustomField>