force-app/main/default/objects/ssot__GiftCmtChangeAttrLog__dlm/fields/ssot__rel_1724992825581_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724992825581_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftCmtChangeAttrLog_GiftCommitmentI_rel</label>
    <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
    <relationshipLabel>GiftCmtChangeAttrLog_GiftCommitmentI_rel</relationshipLabel>
    <relationshipName>rel_1724992825581_end</relationshipName>
    <type>Lookup</type>
</CustomField>